force-app/main/default/objects/Inventory_Transaction_Item__c/Inventory_Transaction_Item__c.object-meta.xml
<CustomObject>
    <label>Inventory Transaction Item</label>
    <nameField>
        <label>Inventory Transaction Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Transaction Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>