force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Name</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Inventory Transaction Items</relationshipLabel>
    <relationshipName>Inventory_Transaction_Items</relationshipName>
    <type>Lookup</type>
</CustomField>