force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <formula>TEXT(Asset_Name__r.Inventory_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Status</label>
    <type>Text</type>
</CustomField>