force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Color_Name__c.field-meta.xml
<CustomField>
    <fullName>Color_Name__c</fullName>
    <formula>Product__r.Color_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Name</label>
    <type>Text</type>
</CustomField>