force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <label>Engine No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>