force-app/main/default/objects/Inventory_Transaction_Item__c/fields/From_Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>From_Warehouse_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Warehouse Location</label>
    <referenceTo>Warehouse_Location__c</referenceTo>
    <relationshipLabel>Inventory Transaction Items</relationshipLabel>
    <relationshipName>Inventory_Transaction_Items</relationshipName>
    <type>Lookup</type>
</CustomField>