force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Inventory_Transaction_Header__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Transaction_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Transaction Header</label>
    <referenceTo>X3_Inventory_Transaction_Header__c</referenceTo>
    <relationshipLabel>Inventory Transaction Items</relationshipLabel>
    <relationshipName>Inventory_Transaction_Items</relationshipName>
    <type>Lookup</type>
</CustomField>