force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <formula>Inventory_Transaction_Header__r.Order_Reserved__r.Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>