force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Invoice_SeqNo__c.field-meta.xml
<CustomField>
    <fullName>Invoice_SeqNo__c</fullName>
    <label>Invoice SeqNo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>