force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Is_Merg__c.field-meta.xml
<CustomField>
    <fullName>Is_Merg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Merg</label>
    <type>Checkbox</type>
</CustomField>