force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Order_Bike_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Order_Bike_Reserve__c</fullName>
    <formula>Inventory_Transaction_Header__r.Order_Reserved__r.Order__r.Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Bike Reserve</label>
    <type>Text</type>
</CustomField>