force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Part_No_Order__c.field-meta.xml
<CustomField>
    <fullName>Part_No_Order__c</fullName>
    <label>Part No-Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>