force-app/main/default/objects/Inventory_Transaction_Item__c/fields/PartManifest_ID__c.field-meta.xml
<CustomField>
    <fullName>PartManifest_ID__c</fullName>
    <label>PartManifest ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>