force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Price_Cost__c.field-meta.xml
<CustomField>
    <fullName>Price_Cost__c</fullName>
    <label>Price Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>