force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Price_Include_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_Include_VAT__c</fullName>
    <formula>IF( Product__r.RecordType.Name = &apos;PCA&apos;, Product__r.Std_Retail_Price__c *(1+ Product__r.VAT__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Include VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>