force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Quantity_Amount_Remaing_KPI__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Amount_Remaing_KPI__c</fullName>
    <label>Quantity Amount Remaining KPI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>