force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>Product__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>