force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Sales_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Name__c</fullName>
    <formula>Asset_Name__r.Product2.Sales_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Name</label>
    <type>Text</type>
</CustomField>