force-app/main/default/objects/Inventory_Transaction_Item__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>SerialNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>