force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Stock_Age__c.field-meta.xml
<CustomField>
    <fullName>Stock_Age__c</fullName>
    <formula>TODAY() - Inventory_Transaction_Header__r.StockDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>