force-app/main/default/objects/Inventory_Transaction_Item__c/fields/To_Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>To_Warehouse_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Warehouse Location</label>
    <referenceTo>Warehouse_Location__c</referenceTo>
    <relationshipLabel>Inventory Transaction Items (To Warehouse Location)</relationshipLabel>
    <relationshipName>Inventory_Transaction_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>