force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Total_Price_excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_excl_VAT__c</fullName>
    <formula>Unit_Price__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price (excl VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>