force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Totals__c.field-meta.xml
<CustomField>
    <fullName>Totals__c</fullName>
    <description>Thành Tiền</description>
    <label>Totals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>