force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>DVT</description>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>