force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Unit_Product__c.field-meta.xml
<CustomField>
    <fullName>Unit_Product__c</fullName>
    <formula>TEXT(Product__r.Product_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Product</label>
    <type>Text</type>
</CustomField>