force-app/main/default/objects/Inventory_Transaction_Item__c/fields/VAT_Product__c.field-meta.xml
<CustomField>
    <fullName>VAT_Product__c</fullName>
    <formula>Product__r.VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>