force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Warehouse_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Inventory</label>
    <referenceTo>Warehouse_Inventory__c</referenceTo>
    <relationshipLabel>Inventory Transaction Items</relationshipLabel>
    <relationshipName>Inventory_Transaction_Items</relationshipName>
    <type>Lookup</type>
</CustomField>