force-app/main/default/objects/Inventory_Transaction_Item__c/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Location</label>
    <referenceTo>Warehouse_Location__c</referenceTo>
    <relationshipLabel>Inventory Transaction Items (Warehouse Location)</relationshipLabel>
    <relationshipName>Inventory_Transaction_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>